# openrelik-worker-recmd

./: Dockerfile  README.md  openrelik.yaml  pyproject.toml
src/: app.py  recmd.py
